...
            android:text="@string/Exchange"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/button_selector"/>

        <Button
            android:id="@+id/bank_transferButton"
            android:layout_width="wrap_content"
            android:enabled="true"
            android:layout_margin="5dp"
            android:text="@string/Transfer"
            android:layout_height="wrap_content"
            android:layout_weight="2"
...
                 android:padding="3dip"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:text="@string/GOLD" />

             <TextView
                 android:id="@+id/bank_GOLDvalue"
                 android:layout_weight="1"
                 android:textSize="20sp"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:padding="3dip"
                 android:text="@string/Placeholder_zero" />
...

         </TableRow>

     </TableLayout>

     <!--<TextView
         android:id="@+id/bank_exchangedTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="@string/ExchangesLeftPlaceholder"
         android:layout_marginBottom="15dp"
         android:layout_below="@+id/bank_exchangeRates"/>-->
...
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/ExchangesLeftPlaceholder"/>

        <EditText
            android:id="@+id/bank_transferEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_email"
            android:autofillHints="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical"
...
         android:gravity="center_horizontal"
         android:layout_below="@id/bank_lineUnderViewSwitcher"/>



     <GridView
         android:id="@+id/bank_coinzGridView"
         android:horizontalSpacing="10dp"
         android:verticalSpacing="20dp"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/bank_lineUnderViewSwitcher"
...
